...
        onDestinationSelected: (i) => setState(() => _index = i),
        destinations: const [
          NavigationDestination(icon: Icon(Icons.list_alt), label: 'Mis viajes'),
          NavigationDestination(icon: Icon(Icons.summarize), label: 'Resumen'),
          NavigationDestination(
              icon: Icon(Icons.account_balance_wallet), label: 'Cuentas'),
          NavigationDestination(icon: Icon(Icons.add_road), label: 'Nuevo'),
        ],
      ),
    );
  }
}

